@@ -31,6 +31,16 @@ HEADERS += \
 
 SOURCES += \
     odmrimagingng.cpp \
+
+    win32 {
+        HEADERS += \
+            oceanopticsusb.h \
+
+        SOURCES += \
+            oceanopticsusb.cpp \
+
+        DEFINES += USE_OCEANOPTICS_USB
+    }
 }
 
 FORMS += \
